--- a/day1/notebook.ipynb
+++ b/day1/notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMHX4/1123n7WTLuvbnKp45",
+      "authorship_tag": "ABX9TyOFAJAMyjHbbq0YcD+jJgwS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,6 +83,19 @@
         "-AACC-CBC--\n",
         "ACC"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile bob.txt\n",
+        "aklsdjalksjdlkasjdlkasjdklas\n",
+        "sdaslkdjaslkdj"
+      ],
+      "metadata": {
+        "id": "0nAj1iNqq5E0"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -280,19 +293,11 @@
     {
       "cell_type": "code",
       "source": [
-        "save_fasta(\"example_filt.fasta\",new_names,new_seqs)"
+        "fix_names = [name.split(\":\")[0] for name in new_names]\n",
+        "save_fasta(\"example_filt.fasta\",fix_names,new_seqs)"
       ],
       "metadata": {
         "id": "dj5zRqnT-yfe"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "wYaGF0Pp-9Cg"
       },
       "execution_count": null,
       "outputs": []
@@ -343,6 +348,15 @@
       ],
       "metadata": {
         "id": "FYhJ_x6g_4ge"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "0eAP2xGSvWe2"
       },
       "execution_count": null,
       "outputs": []
