--- a/day2/notebook_part2.ipynb
+++ b/day2/notebook_part2.ipynb
@@ -382,7 +382,7 @@
         "  ic = jnp.linalg.inv(c + shrink)\n",
         "  return ic.reshape(L,A,L,A)\n",
         "\n",
-        "def get_mtx(raw, apc=False, exclude_last=False):\n",
+        "def get_mtx(raw, apc=False, exclude_last=False, return_all=False):\n",
         "  raw = np.asarray(raw)\n",
         "  if exclude_last:\n",
         "    raw = raw[:,:-1,:,:-1]\n",
@@ -393,7 +393,10 @@
         "    ap = np.sum(mtx,0,keepdims=True) * np.sum(mtx,1,keepdims=True)/np.sum(mtx)\n",
         "    mtx = mtx - ap\n",
         "    np.fill_diagonal(mtx,0)\n",
-        "  return mtx\n",
+        "  if return_all:\n",
+        "    return {\"W\":raw,\"mtx\":mtx}\n",
+        "  else:\n",
+        "    return mtx\n",
         "\n",
         "def get_coevo(X, reg=None, apc=False, exclude_last=False):\n",
         "  '''\n",
