--- a/day2/notebook_part1.ipynb
+++ b/day2/notebook_part1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPrjZK6qH9xAI0NdCdQkTvU",
+      "authorship_tag": "ABX9TyNJwo9d7JdIxZHTX5ovo8Zo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -52,7 +52,7 @@
         "import matplotlib.pyplot as plt\n",
         "import plotly.express as px"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -74,7 +74,7 @@
         "id": "HlCCoSvhRkjb"
       },
       "source": [
-        "px.scatter(x,y)"
+        "px.scatter(x=x,y=y)"
       ],
       "execution_count": null,
       "outputs": []
@@ -144,7 +144,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7NL6HxD8thQM"
+        "id": "7NL6HxD8thQM",
+        "cellView": "form"
       },
       "source": [
         "#@title helper functions <- RUN THIS\n",
@@ -321,8 +322,8 @@
       },
       "source": [
         "plt.scatter(dm_A, dm_B, s=1)\n",
-        "plt.xlabel(\"dm(A)\")\n",
-        "plt.ylabel(\"dm(A)\")"
+        "plt.xlabel(\"original\")\n",
+        "plt.ylabel(\"reduced\")"
       ],
       "execution_count": null,
       "outputs": []
