--- a/day2/notebook_part2.ipynb
+++ b/day2/notebook_part2.ipynb
@@ -3,7 +3,6 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Intro_to_MRFs_jax.ipynb",
       "provenance": [],
       "include_colab_link": true
     },
@@ -398,7 +397,7 @@
         "  else:\n",
         "    return mtx\n",
         "\n",
-        "def get_coevo(X, reg=None, apc=False, exclude_last=False):\n",
+        "def get_coevo(X, reg=None, apc=False, exclude_last=False, return_all=False):\n",
         "  '''\n",
         "  ---------------------------------\n",
         "  input:\n",
@@ -410,7 +409,7 @@
         "  ---------------------------------\n",
         "  '''\n",
         "  Y = np.eye(X.max()+1)[X] if X.ndim == 2 else X\n",
-        "  return get_mtx(inv_cov(Y, lam=reg), apc=apc, exclude_last=exclude_last)"
+        "  return get_mtx(inv_cov(Y, lam=reg), apc=apc, exclude_last=exclude_last, return_all=return_all)"
       ],
       "metadata": {
         "id": "nPY2vlP7eW8e"
@@ -535,6 +534,43 @@
         "  sequence = [''.join(seq) for seq in sequence]\n",
         "  return header, sequence\n",
         "\n",
+        "def filt_seqs(names, seqs):\n",
+        "  \n",
+        "  # get query (first) sequence\n",
+        "  query_seq = seqs[0]\n",
+        "  \n",
+        "  # convert sequence into numpy array of characters\n",
+        "  query_array = np.array(list(query_seq))\n",
+        "  \n",
+        "  # check which characters are not \"-\"\n",
+        "  query_non_gap = query_array != \"-\"\n",
+        "  \n",
+        "  # the length of query\n",
+        "  query_length = sum(query_non_gap)\n",
+        "  \n",
+        "  # make a new list of names/sequences\n",
+        "  new_names = []\n",
+        "  new_seqs = []\n",
+        "    \n",
+        "  # for each name and sequence\n",
+        "  for name,seq in zip(names,seqs):\n",
+        "    \n",
+        "    # convert sequence into numpy array of characters\n",
+        "    seq_array = np.array(list(seq))\n",
+        "\n",
+        "    # select only positions that are non-gap in query\n",
+        "    seq_array = seq_array[query_non_gap]\n",
+        "\n",
+        "    # count number of gaps remaining in sequence\n",
+        "    seq_gap_count = sum(seq_array == \"-\")\n",
+        "    \n",
+        "    # if there are more than 25% gaps, ignore\n",
+        "    if seq_gap_count/query_length <= 0.25:\n",
+        "      new_names.append(name)\n",
+        "      new_seqs.append(\"\".join(seq_array))\n",
+        "            \n",
+        "  return new_names, new_seqs\n",
+        "\n",
         "def mk_msa(seqs):\n",
         "  '''one hot encode msa'''\n",
         "  alphabet = list(\"ARNDCQEGHILKMFPSTWYV-\")\n",
@@ -548,8 +584,8 @@
         "  return np.eye(states)[msa]"
       ],
       "metadata": {
-        "cellView": "form",
-        "id": "VQH_A5Fld9dz"
+        "id": "VQH_A5Fld9dz",
+        "cellView": "form"
       },
       "execution_count": null,
       "outputs": []
@@ -557,7 +593,7 @@
     {
       "cell_type": "code",
       "source": [
-        "nams, seqs = parse_fasta(\"example_filt.fasta\")\n",
+        "nams, seqs = filt_seqs(*parse_fasta(\"psiblast_3735580.aln\"))\n",
         "msa = mk_msa(seqs)"
       ],
       "metadata": {
@@ -569,7 +605,7 @@
     {
       "cell_type": "code",
       "source": [
-        "coevo = get_coevo(msa, apc=True, exclude_last=True)"
+        "O = get_coevo(msa, apc=True, exclude_last=True, return_all=True)"
       ],
       "metadata": {
         "id": "McSB5Kc1eQqB"
@@ -580,10 +616,68 @@
     {
       "cell_type": "code",
       "source": [
-        "plt.imshow(coevo,vmin=0,vmax=0.3, cmap=\"Blues\")"
+        "plt.imshow(O[\"mtx\"],vmin=0,vmax=0.3, cmap=\"Blues\")"
       ],
       "metadata": {
         "id": "ArrR7S3Vfyxm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_topk(A,k=10):\n",
+        "  i_upper = np.triu_indices(A.shape[0], k=1)\n",
+        "  upper_triangle_values = A[i_upper]\n",
+        "  absolute_values = np.abs(upper_triangle_values)\n",
+        "  sorted_indices = np.argsort(absolute_values)[::-1]\n",
+        "  top_10_indices = sorted_indices[:k]\n",
+        "  top_10_values = upper_triangle_values[top_10_indices]\n",
+        "  top_10_i, top_10_j = np.array(i_upper)[:, top_10_indices]\n",
+        "  for value, i, j in zip(top_10_values, top_10_i, top_10_j):\n",
+        "    print(f\"{i} {j} {value}\")  "
+      ],
+      "metadata": {
+        "id": "B3sT0ShEX-kp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "get_topk(O[\"mtx\"])"
+      ],
+      "metadata": {
+        "id": "23hiB9mVY0F-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def plot_w(w,i,j):\n",
+        "  sub_w = w[i,:,j,:]\n",
+        "  mx = np.abs(sub_w).max()\n",
+        "  \n",
+        "  # plot\n",
+        "  alphabet = list(\"ARNDCQEGHILKMFPSTWYV-\")\n",
+        "  plt.figure(figsize=(w.shape[0]/3,w.shape[1]/4))\n",
+        "  plt.imshow(sub_w,cmap='bwr_r',vmin=-mx,vmax=mx)\n",
+        "  plt.xticks(np.arange(sub_w.shape[0]))\n",
+        "  plt.yticks(np.arange(sub_w.shape[1]))\n",
+        "  plt.grid(False)\n",
+        "  plt.gca().xaxis.set_major_formatter(plt.FuncFormatter(lambda x,y: alphabet[x])) \n",
+        "  plt.gca().yaxis.set_major_formatter(plt.FuncFormatter(lambda x,y: alphabet[x]))\n",
+        "  plt.title(f\"coupling matrix for {i} and {j}\")\n",
+        "  plt.show()\n",
+        "\n",
+        "plot_w(O[\"W\"],16,76)"
+      ],
+      "metadata": {
+        "id": "v0vHznVsWq3l"
       },
       "execution_count": null,
       "outputs": []
