--- a/day2/notebook_part2.ipynb
+++ b/day2/notebook_part2.ipynb
@@ -593,6 +593,17 @@
     {
       "cell_type": "code",
       "source": [
+        "!wget -qnc https://raw.githubusercontent.com/sokrypton/ws2023/main/day2/psiblast_3735580.aln"
+      ],
+      "metadata": {
+        "id": "33WWF8QLrbtK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "nams, seqs = filt_seqs(*parse_fasta(\"psiblast_3735580.aln\"))\n",
         "msa = mk_msa(seqs)"
       ],
