fix plot_w function

--- a/day2/notebook_part2.ipynb
+++ b/day2/notebook_part2.ipynb
@@ -676,16 +676,18 @@
         "  # plot\n",
         "  alphabet = list(\"ARNDCQEGHILKMFPSTWYV-\")\n",
         "  plt.figure(figsize=(w.shape[0]/3,w.shape[1]/4))\n",
-        "  plt.imshow(sub_w,cmap='bwr_r',vmin=-mx,vmax=mx)\n",
+        "  plt.imshow(sub_w,cmap='bwr',vmin=-mx,vmax=mx)\n",
         "  plt.xticks(np.arange(sub_w.shape[0]))\n",
         "  plt.yticks(np.arange(sub_w.shape[1]))\n",
         "  plt.grid(False)\n",
         "  plt.gca().xaxis.set_major_formatter(plt.FuncFormatter(lambda x,y: alphabet[x])) \n",
         "  plt.gca().yaxis.set_major_formatter(plt.FuncFormatter(lambda x,y: alphabet[x]))\n",
         "  plt.title(f\"coupling matrix for {i} and {j}\")\n",
+        "  plt.xlabel(j)\n",
+        "  plt.ylabel(i)\n",
         "  plt.show()\n",
         "\n",
-        "plot_w(O[\"W\"],16,76)"
+        "plot_w(O[\"W\"],9,83)"
       ],
       "metadata": {
         "id": "v0vHznVsWq3l"
