--- a/day4/notebook.ipynb
+++ b/day4/notebook.ipynb
@@ -295,10 +295,32 @@
         "if \"LAZY_LIBRARY_IMPORTED\" not in dir():\n",
         "  from colabdesign import mk_afdesign_model, clear_mem\n",
         "  from IPython.display import HTML\n",
+        "  def add_cyclic_offset(self, do_it=True):\n",
+        "    '''add cyclic offset to connect N and C term'''\n",
+        "    def cyclic_offset(L):\n",
+        "        i = np.arange(L)\n",
+        "        ij = np.stack([i,i+L],-1)\n",
+        "        offset = i[:,None] - i[None,:]\n",
+        "        c_offset = np.abs(ij[:,None,:,None] - ij[None,:,None,:]).min((2,3))\n",
+        "        return np.sign(offset) * c_offset\n",
+        "    idx = self._inputs[\"residue_index\"]\n",
+        "    offset = np.array(idx[:,None] - idx[None,:])\n",
+        "    if do_it:\n",
+        "      if self.protocol == \"binder\":\n",
+        "        c_offset = cyclic_offset(self._binder_len)\n",
+        "        offset[self._target_len:,self._target_len:] = c_offset\n",
+        "\n",
+        "      if self.protocol in [\"fixbb\",\"partial\",\"hallucination\"]:\n",
+        "        Ln = 0\n",
+        "        for L in self._lengths:\n",
+        "          offset[Ln:Ln+L,Ln:Ln+L] = cyclic_offset(L)\n",
+        "          Ln += L\n",
+        "    self._inputs[\"offset\"] = offset  \n",
         "  LAZY_LIBRARY_IMPORTED = True\n",
         "\n",
         "length =  100#@param {type:\"integer\"}\n",
-        "copies =  1#@param {type:\"integer\"}\n",
+        "copies =  1\n",
+        "use_cyclic_offset = False #@param {type:\"boolean\"}\n",
         "#@markdown ####Weights\n",
         "#@markdown - Minimizing `pae` or maximizing `plddt` often results in a single helix.\n",
         "#@markdown To avoid this, we start with a random sequence and instead try to optimize \n",
@@ -310,7 +332,6 @@
         "#@markdown - The contact definition is based on Cb-Cb diststance `cutoff`. To avoid \n",
         "#@markdown biasing towards helical contact, only contacts with sequence seperation > \n",
         "#@markdown `seqsep` are considered.\n",
-        "\n",
         "\n",
         "seqsep = 9 #@param [\"0\",\"5\",\"9\"] {type:\"raw\"}\n",
         "cutoff = \"14\" #@param [\"8\", \"14\", \"max\"]\n",
@@ -327,6 +348,8 @@
         "  clear_mem()\n",
         "  model = mk_afdesign_model(protocol=\"hallucination\")\n",
         "  model.prep_inputs(length=length, copies=copies)\n",
+        "\n",
+        "add_cyclic_offset(model, do_it=use_cyclic_offset)\n",
         "\n",
         "#@markdown ####Optimizer settings\n",
         "pre_iters =  50 #@param {type:\"integer\"}\n",
