--- a/day4/notebook.ipynb
+++ b/day4/notebook.ipynb
@@ -49,17 +49,8 @@
         "%%time\n",
         "#@title Setup AlphaFold\n",
         "# import libraries\n",
-        "import os,sys,re,time\n",
+        "import os,sys,time\n",
         "if \"SETUP_DONE\" not in dir():\n",
-        "  from IPython.utils import io\n",
-        "  from IPython.display import HTML\n",
-        "  import numpy as np\n",
-        "  import matplotlib\n",
-        "  from matplotlib import animation\n",
-        "  import matplotlib.pyplot as plt\n",
-        "  import tqdm.notebook\n",
-        "  TQDM_BAR_FORMAT = '{l_bar}{bar}| {n_fmt}/{total_fmt} [elapsed: {elapsed} remaining: {remaining}]'\n",
-        "\n",
         "  if not os.path.isdir(\"params\"):\n",
         "    os.system(\"wget -qnc https://raw.githubusercontent.com/sokrypton/ColabFold/main/beta/colabfold.py\")\n",
         "    # get code\n",
@@ -80,8 +71,23 @@
         "      while not os.path.isfile(\"params/done.txt\"):\n",
         "        time.sleep(5)\n",
         "\n",
+        "  SETUP_DONE = True"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "M5cTGqthZYus"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title Enter the amino acid sequence to fold ⬇️\n",
+        "\n",
+        "if \"LIBRARY_IMPORTED\" not in dir():\n",
         "  # configure which device to use\n",
-        "  import jax\n",
+        "  import os,jax\n",
         "  # disable triton_gemm for jax versions > 0.3\n",
         "  if int(jax.__version__.split(\".\")[1]) > 3:\n",
         "    os.environ[\"XLA_FLAGS\"] = \"--xla_gpu_enable_triton_gemm=false\"\n",
@@ -100,24 +106,6 @@
         "      print('Running on GPU')\n",
         "      DEVICE = \"gpu\"\n",
         "\n",
-        "  # import libraries\n",
-        "  sys.path.append('af_backprop')\n",
-        "\n",
-        "  SETUP_DONE = True"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "M5cTGqthZYus"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#@title Enter the amino acid sequence to fold ⬇️\n",
-        "\n",
-        "if \"LIBRARY_IMPORTED\" not in dir():\n",
         "  from colabdesign.af.loss import get_plddt, get_pae\n",
         "  from colabdesign.af.prep import prep_input_features\n",
         "  from colabdesign.af.inputs import update_seq, update_aatype\n",
@@ -126,7 +114,16 @@
         "  from colabdesign.af.alphafold.common import residue_constants\n",
         "  from colabdesign.rf.utils import make_animation\n",
         "  import py3Dmol  \n",
+        "  import re\n",
         "  import colabfold as cf\n",
+        "  from IPython.utils import io\n",
+        "  from IPython.display import HTML\n",
+        "  import numpy as np\n",
+        "  import matplotlib\n",
+        "  from matplotlib import animation\n",
+        "  import matplotlib.pyplot as plt\n",
+        "  import tqdm.notebook\n",
+        "  TQDM_BAR_FORMAT = '{l_bar}{bar}| {n_fmt}/{total_fmt} [elapsed: {elapsed} remaining: {remaining}]'\n",
         "\n",
         "  # setup model\n",
         "  cfg = config.model_config(\"model_5_ptm\")\n",
@@ -295,6 +292,7 @@
         "if \"LAZY_LIBRARY_IMPORTED\" not in dir():\n",
         "  from colabdesign import mk_afdesign_model, clear_mem\n",
         "  from IPython.display import HTML\n",
+        "  import numpy as np\n",
         "  def add_cyclic_offset(self, do_it=True):\n",
         "    '''add cyclic offset to connect N and C term'''\n",
         "    def cyclic_offset(L):\n",
@@ -316,9 +314,10 @@
         "          offset[Ln:Ln+L,Ln:Ln+L] = cyclic_offset(L)\n",
         "          Ln += L\n",
         "    self._inputs[\"offset\"] = offset  \n",
+        "  af_model = mk_afdesign_model(protocol=\"hallucination\")\n",
         "  LAZY_LIBRARY_IMPORTED = True\n",
         "\n",
-        "length =  100#@param {type:\"integer\"}\n",
+        "length =  50#@param {type:\"integer\"}\n",
         "copies =  1\n",
         "use_cyclic_offset = False #@param {type:\"boolean\"}\n",
         "#@markdown ####Weights\n",
@@ -344,12 +343,8 @@
         "              \"binary\":binary}}\n",
         "weights = {\"con\":float(con), \"pae\":float(pae),\"plddt\":float(plddt)}\n",
         "\n",
-        "if \"model\" not in dir() or model._len != length or model._args[\"copies\"] != copies:\n",
-        "  clear_mem()\n",
-        "  model = mk_afdesign_model(protocol=\"hallucination\")\n",
-        "  model.prep_inputs(length=length, copies=copies)\n",
-        "\n",
-        "add_cyclic_offset(model, do_it=use_cyclic_offset)\n",
+        "af_model.prep_inputs(length=length, copies=copies)\n",
+        "add_cyclic_offset(af_model, do_it=use_cyclic_offset)\n",
         "\n",
         "#@markdown ####Optimizer settings\n",
         "pre_iters =  50 #@param {type:\"integer\"}\n",
@@ -358,12 +353,12 @@
         "hard_iters = 0 #@param {type:\"integer\"}\n",
         "\n",
         "# pre-design with gumbel initialization and softmax activation\n",
-        "model.restart(mode=\"gumbel\",opt=opt,weights=weights)\n",
-        "model.design_soft(pre_iters)\n",
+        "af_model.restart(mode=\"gumbel\",opt=opt,weights=weights)\n",
+        "af_model.design_soft(pre_iters)\n",
         "\n",
         "# three stage design  \n",
-        "model.set_seq(model.aux[\"seq\"][\"pseudo\"])\n",
-        "model.design_3stage(soft_iters,temp_iters,hard_iters)"
+        "af_model.set_seq(af_model.aux[\"seq\"][\"pseudo\"])\n",
+        "af_model.design_3stage(soft_iters,temp_iters,hard_iters)"
       ],
       "metadata": {
         "cellView": "form",
@@ -377,12 +372,11 @@
       "source": [
         "#@markdown ## display hallucinated protein {run: \"auto\"}\n",
         "color = \"pLDDT\" #@param [\"chain\", \"pLDDT\", \"rainbow\"]\n",
-        "show_sidechains = False #@param {type:\"boolean\"}\n",
+        "show_sidechains = True #@param {type:\"boolean\"}\n",
         "show_mainchains = False #@param {type:\"boolean\"}\n",
-        "model.save_pdb(f\"{model.protocol}.pdb\")\n",
-        "model.plot_pdb(show_sidechains=show_sidechains,\n",
-        "                   show_mainchains=show_mainchains,\n",
-        "                   color=color)"
+        "af_model.plot_pdb(show_sidechains=show_sidechains,\n",
+        "               show_mainchains=show_mainchains,\n",
+        "               color=color, color_HP=True)"
       ],
       "metadata": {
         "cellView": "form",
@@ -395,7 +389,7 @@
       "cell_type": "code",
       "source": [
         "#@title Animate\n",
-        "HTML(model.animate())"
+        "HTML(af_model.animate())"
       ],
       "metadata": {
         "cellView": "form",
@@ -407,7 +401,8 @@
     {
       "cell_type": "code",
       "source": [
-        "model.get_seqs()"
+        "af_model.save_pdb(f\"{af_model.protocol}.pdb\")\n",
+        "af_model.get_seqs()"
       ],
       "metadata": {
         "id": "JLY9T4u8bqB-"
