--- a/day4/notebook.ipynb
+++ b/day4/notebook.ipynb
@@ -352,8 +352,12 @@
         "temp_iters = 0 #@param {type:\"integer\"}\n",
         "hard_iters = 0 #@param {type:\"integer\"}\n",
         "\n",
-        "# pre-design with gumbel initialization and softmax activation\n",
-        "af_model.restart(mode=\"gumbel\",opt=opt,weights=weights)\n",
+        "if pre_iters == 0:\n",
+        "  # pre-design with gumbel initialization and softmax activation\n",
+        "  mode = \"soft_gumbel\"\n",
+        "else:\n",
+        "  mode = \"gumbel\"\n",
+        "af_model.restart(mode=mode,opt=opt,weights=weights)\n",
         "af_model.design_soft(pre_iters)\n",
         "\n",
         "# three stage design  \n",
@@ -406,6 +410,15 @@
       ],
       "metadata": {
         "id": "JLY9T4u8bqB-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "qFCslTj1t_ah"
       },
       "execution_count": null,
       "outputs": []
